Bazelize //agents/scripts
CMK-26879

Change-Id: Icc0966aa4b197fd49a7e5a1615fb5a3fb8486744

--- a/agents/BUILD
+++ b/agents/BUILD
@@ -20,3 +20,19 @@ filegroup(
     ],
     visibility = ["//visibility:public"],
 )
+
+filegroup(
+    name = "srcs",
+    srcs = [
+        "scripts/manage-agent-user.sh",
+        "scripts/manage-binaries.sh",
+        "scripts/migrate.sh",
+    ],
+    visibility = ["//visibility:public"],
+)
+
+filegroup(
+    name = "super-server",
+    srcs = glob(["scripts/super-server/**"]),
+    visibility = ["//visibility:public"],
+)
