Remove short edition from the package build
The end goal is to completely get rid of the "short" edition identifier.

As this is a quite fundamental change, it needs to be taken step by step.
For example, the short names will still be used in the werks for some
time until we clean them up there. Likewise a few other places will need
a transition phase.

We now lay the foundation by removing the short edition from the package,
which will trigger some immediate follow-up changes in the system level
tests.

CMK-27226

Change-Id: Id974de890f02e8e0fea60480ac3868a642150108

--- a/bazel/cmk/edition/BUILD.bazel
+++ b/bazel/cmk/edition/BUILD.bazel
@@ -4,37 +4,37 @@ package(default_visibility = ["//visibility:public"])
 
 string_flag(
     name = "edition",
-    build_setting_default = "cre",
+    build_setting_default = "raw",
     values = [
-        "cre",
-        "cce",
-        "cee",
-        "cme",
-        "cse",
+        "raw",
+        "cloud",
+        "enterprise",
+        "managed",
+        "saas",
     ],
 )
 
 config_setting(
-    name = "cre",
-    flag_values = {":edition": "cre"},
+    name = "raw",
+    flag_values = {":edition": "raw"},
 )
 
 config_setting(
-    name = "cce",
-    flag_values = {":edition": "cce"},
+    name = "cloud",
+    flag_values = {":edition": "cloud"},
 )
 
 config_setting(
-    name = "cee",
-    flag_values = {":edition": "cee"},
+    name = "enterprise",
+    flag_values = {":edition": "enterprise"},
 )
 
 config_setting(
-    name = "cme",
-    flag_values = {":edition": "cme"},
+    name = "managed",
+    flag_values = {":edition": "managed"},
 )
 
 config_setting(
-    name = "cse",
-    flag_values = {":edition": "cse"},
+    name = "saas",
+    flag_values = {":edition": "saas"},
 )
