cmk-agent-ctl: Disable rustdoc
Fails with rust 1.90

Change-Id: I187dcc11414fadf30d5882b2fdb196f47d64e07f

--- a/packages/cmk-agent-ctl/BUILD
+++ b/packages/cmk-agent-ctl/BUILD
@@ -149,4 +149,5 @@ rust_doc(
     name = "doc",
     crate = ":cmk-agent-ctl-lib",
     rustdoc_flags = ["--document-private-items"],
+    tags = ["manual"],
 )
