Use system curl/pdftoppm for almalinux-10
The system curl/pdftoppm is linked against OpenSSL 3.2

We currently provide 3.0.16 so we cannot use our packaged OpenSSL.

CMK-17203

Change-Id: Ia9b0ef66c8c4f923ac8d7e1b558a50afeee5efc6

--- a/omd/packages/omd/BUILD
+++ b/omd/packages/omd/BUILD
@@ -248,6 +248,10 @@ pkg_tar(
         "@cmk//distro:debian-13": [
             ":wrapper_curl",
         ],
+        "@cmk//distro:almalinux-10": [
+            ":wrapper_curl",
+            ":wrapper_pdftoppm",
+        ],
         "//conditions:default": [],
     }),
     empty_dirs = [
