Ensure .cache directory exists due to bug in cronie
RHEL 10 upgraded cronie to a version which introduces a bug.

See: https://github.com/cronie-crond/cronie/issues/173

This change ensures the directory exists when a new site user is created.

CMK-17203

Change-Id: I007c23f092474cb409f74d8001f5800b5ba0ba3d

--- a/omd/packages/maintenance/BUILD
+++ b/omd/packages/maintenance/BUILD
@@ -43,6 +43,12 @@ pkg_files(
 )
 
 pkg_mkdirs(
+    name = "skel_cache",
+    dirs = ["skel/.cache"],
+    tags = ["manual"],
+)
+
+pkg_mkdirs(
     name = "skel_diskspace",
     dirs = ["skel/local/share/diskspace"],
     tags = ["manual"],
@@ -61,6 +67,7 @@ pkg_tar(
         ":bin_diskspace_pkg",
         ":bin_pkg",
         ":skel",
+        ":skel_cache",
         ":skel_crontab",
         ":skel_diskspace",
     ],
