wa: add support id filtration logic to config
CMK-26956

Change-Id: Ie1f82a90eca91b97bf9ab92115ea6035da4ad4b5

--- a/agents/wnx/install/resources/check_mk.yml
+++ b/agents/wnx/install/resources/check_mk.yml
@@ -194,6 +194,8 @@ logwatch:
         - 'Parameters': ignore
         - 'State': ignore
         - '*': warn nocontext # This is default params for not missing entries
+    logfile_ids: # to filter event log by id
+        - '*': ;;       # 1;2-10;;3;5-7 means include 1, 2, 4, 8, 9, 10. ;; means nothing
 
 plugins:
     enabled: yes
