--- a/agents/wnx/install/resources/check_mk.user.yml
+++ b/agents/wnx/install/resources/check_mk.user.yml
@@ -240,6 +240,9 @@ logwatch:
         # - 'YourOwn': all nocontext    # yet another example
         # - '*': warn nocontext         # This is default params for not missing entries
 
+    logfile_ids: # to filter event log by id
+        # - '*': 20-1000;1010;;30-40       # include [20,1000], 1010 and exclude [30-40], all INCLUSIVE
+
 plugins:
     # enabled: yes
 
