--- a/tests/Makefile
+++ b/tests/Makefile
@@ -211,19 +211,11 @@ test-lint-groovy:
 	cd ..; scripts/run-groovy-lint --loglevel warning --failon error $(GROOVYLINT_OUTPUT_ARGS)
 
 test-performance:
-	BRANCH=$(shell make --no-print-directory --file="../defines.make" print-BRANCH_VERSION) ; \
-	EDITION=cee ; \
-	RELEASE="$${BRANCH}-$$(date '+%Y.%m.%d').$${EDITION}" ; \
-	ROOT_DIR=$(or $(RESULT_PATH),"$(REPO_PATH)/results")/performance ; \
-	BENCHMARK_DIR=$${ROOT_DIR}/$${RELEASE} ; \
-	mkdir -p "$${BENCHMARK_DIR}" ; \
-	$(PYTEST) "$(realpath performance)" $(PYTEST_SYSTEM_TEST_ARGS) \
-	--benchmark-json="$${BENCHMARK_DIR}/benchmark.json" \
-	--benchmark-verbose --html="$${BENCHMARK_DIR}/report.htm" \
-	--self-contained-html --ignore-running-procs ; \
-	$(UVENV) "$(realpath performance)/perftest_plot.py" --update-db \
-	--root-dir="$${ROOT_DIR}" --log-level=INFO --dbhost=qa.lan.checkmk.net \
-	--validate-baselines --alert-on-failure --jira-url="https://jira.lan.tribe29.com/"
+	BRANCH=$(shell make --no-print-directory --file="../defines.make" print-BRANCH_VERSION) \
+	EDITION=cee RELEASE="$${BRANCH}-$$(date '+%Y.%m.%d').$${EDITION}" \
+	ROOT_DIR=$(or $(RESULT_PATH),"$(REPO_PATH)/results")/performance \
+	BENCHMARK_DIR=$${ROOT_DIR}/$${RELEASE} \
+	$(UVENV) "$(realpath performance)/perftest.sh"
 
 test-performance-docker:
 	RESULT_PATH=$(realpath ..) $(UVENV) scripts/run-dockerized.py "$(subst -docker,,$@)"
