cmk.gui: rename saml2 -> saml2_auth
Avoid the name collision with the third party module.

Change-Id: I0d26ee3dca32ed0de3631b280b09f847cb868d30

--- a/tests/semgrep/rules/key_size_unit_test.yaml
+++ b/tests/semgrep/rules/key_size_unit_test.yaml
@@ -10,7 +10,7 @@ rules:
     pattern-either:
       - patterns:
           - pattern-inside: |
-              from cmk.gui.cee.saml2._config import
+              from cmk.gui.cee.saml2_auth._config import
               replace_builtin_signature_cert
               ...
           - patterns:
