--- a/bazel/module/gazelle/go.MODULE.bazel
+++ b/bazel/module/gazelle/go.MODULE.bazel
@@ -56,3 +56,9 @@ go_deps.gazelle_override(
     build_file_generation = "on",
     path = "github.com/cncf/xds/go",
 )
+go_deps.gazelle_override(
+    directives = [
+        "gazelle:proto disable",
+    ],
+    path = "go.opentelemetry.io/collector/exporter/exporterhelper",
+)
