performance test: Force updating DB on a rerun
When a job was already existing in the DB but failed, the DB was
not updated, leaving the outdated results in metabase. This change
fixes that.

Change-Id: I2b88b43d1483fd6ae973f69e2af957271712298a

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -221,7 +221,7 @@ test-performance:
 	--benchmark-json="$${BENCHMARK_DIR}/benchmark.json" \
 	--benchmark-verbose --html="$${BENCHMARK_DIR}/report.htm" \
 	--self-contained-html --ignore-running-procs ; \
-	$(UVENV) "$(realpath performance)/perftest_plot.py" \
+	$(UVENV) "$(realpath performance)/perftest_plot.py" --update-db \
 	--root-dir="$${ROOT_DIR}" --log-level=INFO --dbhost=qa.lan.checkmk.net \
 	--validate-baselines --alert-on-failure --jira-url="https://jira.lan.tribe29.com/"
 
