--- a/agents/wnx/install/resources/check_mk.yml
+++ b/agents/wnx/install/resources/check_mk.yml
@@ -194,7 +194,7 @@ logwatch:
         - 'Parameters': ignore
         - 'State': ignore
         - '*': warn nocontext # This is default params for not missing entries
-    logfile_ids: # to filter event log by id
+    filter_ids: # to filter event log by id
         - '*': ;;       # 1;2-10;;3;5-7 means include 1, 2, 4, 8, 9, 10. ;; means nothing
 
 plugins:
