--- a/buildscripts/docker_image_aliases/IMAGE_TESTING/meta.yml
+++ b/buildscripts/docker_image_aliases/IMAGE_TESTING/meta.yml
@@ -1,2 +1,2 @@
 source: artifacts.lan.tribe29.com:4000/ubuntu-20.04:2.3.0-latest
-tag: artifacts.lan.tribe29.com:4000/ubuntu-20.04:2.3.0-latest-image-alias-2.3.0-757a15bdb2b
+tag: artifacts.lan.tribe29.com:4000/ubuntu-20.04:2.3.0-2025.11.03-4b24458a
