Converted gtest to bazel MODULE
Encountered the following error when attempting to run the following
command:

    bazel query 'rdeps("//...", "//some-package"")'

Error:

    ERROR: Evaluation of query "rdeps(//..., //some-package)" failed:
    preloading transitive closure failed: no such package '@@fuchsia_sdk//pkg/zx':
    The repository '@@fuchsia_sdk' could not be resolved: Repository '@@fuchsia_sdk' is not defined

This was due to a bug in the gtest, see: https://github.com/google/googletest/issues/4472

The fix requires using including it as a module.

Change-Id: Ia5139fb0bfe7c3b313ec1303ecc4528880ac8925

--- a/packages/neb/BUILD
+++ b/packages/neb/BUILD
@@ -122,6 +122,6 @@ cc_test(
     deps = [
         ":dummy_nagios",
         ":test_utilities",
-        "@gtest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
