--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -2,6 +2,8 @@ repo_license = use_repo_rule("//bazel/rules:repo_license.bzl", "detect_repo_lice
 
 repo_license(name = "repo_license")
 
+bazel_dep(name = "googletest", version = "1.17.0")
+
 # Hedron's Compile Commands Extractor for Bazel
 # https://github.com/hedronvision/bazel-compile-commands-extractor
 bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
