--- a/buildscripts/infrastructure/build-nodes/sles-15sp3/Dockerfile
+++ b/buildscripts/infrastructure/build-nodes/sles-15sp3/Dockerfile
@@ -36,6 +36,7 @@ RUN zypper ref -s \
     gcc-c++ \
     gd-devel \
     glib2-devel \
+    gmp-devel-6.1.2-4.9.1.x86_64 \
     groff \
     gtk-doc \
     intltool \
@@ -65,6 +66,7 @@ RUN zypper ref -s \
     xmlsec1-devel \
     xmlsec1-openssl-devel \
     mariadb-client \
+    mpfr-devel \
     openldap2-devel \
     openssh \
     pango-devel \
