--- a/buildscripts/infrastructure/build-nodes/ubuntu-20.04/Dockerfile
+++ b/buildscripts/infrastructure/build-nodes/ubuntu-20.04/Dockerfile
@@ -68,6 +68,7 @@ RUN apt-get update \
     libldap2-dev \
     libltdl-dev \
     libmcrypt-dev \
+    libmpfr-dev \
     libmysqlclient-dev \
     libncurses5-dev \
     libpango1.0-dev \
