--- a/buildscripts/infrastructure/build-nodes/ubuntu-22.04/Dockerfile
+++ b/buildscripts/infrastructure/build-nodes/ubuntu-22.04/Dockerfile
@@ -56,6 +56,7 @@ RUN apt-get install -y --fix-missing \
     libfreeradius-dev \
     libgd-dev \
     libglib2.0-dev \
+    libgmp-dev \
     libgnutls28-dev \
     libgsf-1-dev \
     libkrb5-dev \
@@ -74,6 +75,7 @@ RUN apt-get install -y --fix-missing \
     libtool \
     libxml2-dev \
     libxmlsec1-dev \
+    libmpfr-dev \
     netcat-openbsd \
     openssh-client \
     patch \
