--- a/buildscripts/infrastructure/build-nodes/almalinux-10/Dockerfile
+++ b/buildscripts/infrastructure/build-nodes/almalinux-10/Dockerfile
@@ -41,6 +41,7 @@ RUN yum -y makecache \
     freeradius-devel \
     gd-devel \
     gettext \
+    gmp-devel \
     gtk-doc \
     httpd-devel \
     kernel-headers \
