--- a/omd/BUILD
+++ b/omd/BUILD
@@ -362,6 +362,7 @@ pkg_tar(
         "@cmk//distro:debian-13": "0.trixie",
         "@cmk//distro:sles-15sp5": "sles15sp5",
         "@cmk//distro:sles-15sp6": "sles15sp6",
+        "@cmk//distro:sles-15sp7": "sles15sp7",
         "@cmk//distro:ubuntu-22.04": "0.jammy",
         "@cmk//distro:ubuntu-24.04": "0.noble",
     }),
