--- a/omd/distros/BUILD
+++ b/omd/distros/BUILD
@@ -10,6 +10,7 @@ genrule(
             "@cmk//distro:debian-13": ["DEBIAN_13.mk"],
             "@cmk//distro:sles-15sp5": ["SLES_15SP5.mk"],
             "@cmk//distro:sles-15sp6": ["SLES_15SP6.mk"],
+            "@cmk//distro:sles-15sp7": ["SLES_15SP7.mk"],
             "@cmk//distro:ubuntu-22.04": ["UBUNTU_22.04.mk"],
             "@cmk//distro:ubuntu-24.04": ["UBUNTU_24.04.mk"],
         },
@@ -32,6 +33,7 @@ genrule(
             "@cmk//distro:debian-13": ["DEBIAN_13.mk"],
             "@cmk//distro:sles-15sp5": ["SLES_15SP5.mk"],
             "@cmk//distro:sles-15sp6": ["SLES_15SP6.mk"],
+            "@cmk//distro:sles-15sp7": ["SLES_15SP7.mk"],
             "@cmk//distro:ubuntu-22.04": ["UBUNTU_22.04.mk"],
             "@cmk//distro:ubuntu-24.04": ["UBUNTU_24.04.mk"],
         },
