--- a/packages/cmk-check-engine/BUILD
+++ b/packages/cmk-check-engine/BUILD
@@ -91,7 +91,7 @@ py_library(
         "//packages/cmk-crypto",
     ] + select({
         "@//:gpl_repo": [],
-        "@//:gpl+enterprise_repo": [
+        "@//:gpl+nonfree_repo": [
             "//non-free/packages/cmk-core-helpers:inline-snmp",
         ],
     }),
